cambios de estilo

--- a/CV.html
+++ b/CV.html
@@ -8,18 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="PaginaCV">
-<Header> 
-<h1 class="Nombre">Alberto Perez Ortega</h1>
+<Header class="Nombre"> 
+<h1>Alberto Perez Ortega</h1>
 <p>Graduado en turismo por la universidad de Málaga en 2014. He trabajado en el sector aeroportuario desde 2015 en Reino Unido y en Málaga en diferentes roles incluyendo atencion al publico,formación, finanzas y recursos humanos. Actualmente cursando una Formacion Profesional de desarrollo de aplicaciones multiplataforma para cambiar mi ambito laboral y extender mis conocimientos.</p>
 </Header>
-<section class="Educacion">
+<Main class="Curriculum">
+<div class="Educacion">
     <h2>Educación:</h2>
     <ul>
         <li><h3>Graduado en Turismo. Universidad de Málaga (2010-2014)</h3></li>
         <li><h3>Bachillerato tecnlógico. IES Almenara (2008-2010)</h3></li>
     </ul>
-</section>
-<section class="Experiencia"> <h2>Experiencia:</h2>
+</div>
+<div class="Experiencia"> <h2>Experiencia:</h2>
     <ul>
     <li><h3 class="Titulo">Administrativo de RRHH </h3><br></li>
     <b>OSC Servicios aeroportuarios (2021-2022) Aeropuerto de Málaga Costa del Sol.</b><br>
@@ -39,9 +40,9 @@
 
 
 </ul>
-</section>
-
-<section class="Idiomas"> <h2>Idiomas:</h2>
+</div>
+</Main>
+<div class="Idiomas"> <h2>Idiomas:</h2>
     <ul>
     <li><h3 class="Titulo">Español</h3></li><br>
     Nativo.
@@ -52,8 +53,14 @@
     Básico. Actualmente cursando B1 en la escuela de Idiomas.
 
     </ul>
-</section>
+</div>
 
+<footer class="Contacto"> <h2>Datos de contacto</h2>
+    <div class="Email"> Email: Apo0106@gmail.com</div>
+    <div class="Telefono">Teléfono: +34 641 128 380</div>
+    <a href="https://www.linkedin.com/in/albertoperezortega/" class="Hyperlink">Linkedin</a>
+    <a href="https://github.com/Aperezortega" class="Hyperlink">Github</a>
+</footer>
 
 </body>
 
