--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body class="Index">
 <header>
-    <h1 class="Nombre">Alberto Perez Ortega</h1>
-    <h2 class="Curso">1DAM</h2>
+    <h1>Alberto Perez Ortega</h1>
+    <h2>1DAM</h2>
 </header>
 </body>
 <ul>
-    <li class="Cv"><a href="CV.html">Curriculum Vitae</a></li> 
+    <li><a href="CV.html">Curriculum Vitae</a></li> 
 </ul>
 
 </body>
